# autoML-FAI-experiments

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.py
ablation/: __init__.py  __main__.py  data_preparation.py  fanova.py  weighting.py
analysis/: __main__.py
automl/: __init__.py  auto_cho.py  auto_df.py  auto_dpp.py  auto_fauci.py  auto_jiang.py  auto_prr.py  auto_pytorch.py
datasets/: __init__.py  loader.py
experiments/: __init__.py  __main__.py  _logging.py
old/: adult_cho_demographic_parity_8_results.csv  adult_jiang_demographic_parity_8_incumbents.csv  adult_prr_demographic_parity_8_incumbents.csv  compas_fauci_demographic_parity_1_results.csv  compas_jiang_demographic_parity_1_incumbents.csv  compas_prr_demographic_parity_1_incumbents.csv
plotters/: __main__.py
results/: __init__.py  adult_cho_demographic_parity_7_incumbents.csv  adult_cho_demographic_parity_7_results.csv  adult_cho_demographic_parity_8+7_incumbents.csv  adult_cho_demographic_parity_8+7_results.csv  adult_cho_demographic_parity_8_incumbents.csv  adult_cho_demographic_parity_8_results.csv  adult_cho_equalized_odds_7_incumbents.csv  adult_cho_equalized_odds_7_results.csv  adult_cho_equalized_odds_8+7_incumbents.csv  adult_cho_equalized_odds_8+7_results.csv  adult_cho_equalized_odds_8_incumbents.csv  adult_cho_equalized_odds_8_results.csv  adult_df_demographic_parity_8+7_incumbents.csv  adult_df_demographic_parity_8+7_results.csv  adult_df_equalized_odds_8+7_incumbents.csv  adult_df_equalized_odds_8+7_results.csv  adult_dpp_demographic_parity_8_incumbents.csv  adult_dpp_demographic_parity_8_results.csv  adult_fauci(Exhaustive)_demographic_parity_8+7_incumbents.csv  adult_fauci(Exhaustive)_demographic_parity_8+7_results.csv  (+159 more)
tables/: __main__.py
(+6234 files in other folders)
