[tool.poetry]
name = "automl-fai-experiments"
version = "0.1.0"
description = "Auto ML applyied to fairness AI methods experiments"
authors = ["Matteo Magnini <matteo.magnini@unibo.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "3.9.1"
numpy = "1.26.2"
pandas = "2.2.2"
pyyaml = "6.0.1"
smac = "2.1.0"
scikit-learn = "1.5.1"
tensorflow = "2.16.1"
torch = "2.4.0"
tqdm = "4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
